# hyperspy-ml-algorithms

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
.omo/run-continuation/: ses_105b970acffeMl6doc9SoEM40O.json
doc/: conf.py  index.rst
doc/reference/: api.rst  index.rst
doc/user_guide/: index.rst
hyperspy_ml_algorithms/: __init__.py
hyperspy_ml_algorithms/.github/workflows/: tests.yml
hyperspy_ml_algorithms/estimators/: __init__.py  _mlpca.py  _ornmf.py  _orthomax.py  _rpca.py  _stubs.py  _svd_pca.py  _whitening.py  incremental_svd.py  mlpca.py  ornmf.py  orthomax.py  rpca.py  svd_pca.py  whitening.py
hyperspy_ml_algorithms/tests/: conftest.py  test_estimator_api.py  test_import.py  test_incremental_svd.py  test_mlpca.py  test_namespace_dispatch.py  test_ornmf.py  test_partial_fit.py  test_rpca.py  test_svd_pca.py
hyperspy_ml_algorithms/utils/: __init__.py  _array_namespace.py
scripts/: check-docs.py
